# pike-type

./: .clang-format  .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  pyproject.toml
.gemini/: settings.json
.steel/: constitution.md  state.json  tasks.json
docs/: architecture.md  ir-schema.md  milestone-01-const-sv.md  piketype-yaml.md  planning.org  requirements.org  rfc-v1.md  templates.md  v1-product-spec.md
hardware/: piketype.yaml  piketype_manifest.json
hardware/.piketype-cache/: _index.json
specs/001-byte-aligned-struct-codegen/: clarifications.md  plan.md  spec.md  tasks.md
specs/004-cpp-constexpr-upper-case/: plan.md  spec.md  tasks.md
specs/005-flags-dsl-type/: plan.md
specs/006-rename-to-pike-type/: spec.md  tasks.md
specs/007-struct-flags-member/: plan.md  spec.md
specs/008-enum-dsl-type/: clarifications.md  spec.md  validation.md
specs/010-jinja-template-migration/: perf.md  plan.md  retrospect.md  spec.md
specs/011-cross-module-type-refs/: clarifications.md  plan.md  retrospect.md  spec.md
specs/012-reserved-keyword-validation/: spec.md  tasks.md  validation.md
specs/013-unpack-signed-cast-explicit-slices/: plan.md  retrospect.md  spec.md  tasks.md
tests/: test_build_diagnostics.py  test_check_templates.py  test_cli_smoke.py  test_config.py  test_const_ranges.py  test_dsl_const.py  test_freeze.py  test_gen_const_sv.py  test_gen_cross_module.py  test_gen_enum.py  test_gen_flags.py  test_gen_multi_root.py  test_gen_vec_const.py  test_init.py  test_ir_cache.py  test_keyword_set_snapshot.py  test_loader.py  test_namespace_validation.py  test_no_inline_imports.py  test_perf_gen.py  test_render.py  test_repo_index.py  test_runtime_bytes.py  test_runtime_compare.py  test_runtime_pack.py  test_runtime_py_cross_module.py  test_scanner.py  test_struct_enum_member.py  test_struct_flags_member.py  test_struct_multiple_of.py  test_validate_engine.py  test_validate_keywords.py  test_vec_const_validation.py  test_view_cpp.py  test_view_py.py  test_view_sv.py
tools/: check_templates.py  perf_bench.py
(+779 files in other folders)
