[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pike-type"
version = "0.6.0"
description = "Python-based code generator for FPGA-oriented type definitions"
readme = "docs/rfc-v1.md"
requires-python = ">=3.12,<3.14"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "Enze Chi" },
]
dependencies = [
  "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "basedpyright>=1.20.0",
  "pytest>=8.0",
  "pytest-xdist>=3.8.0",
]

[project.scripts]
piketype = "piketype.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"piketype.backends.py" = ["templates/**/*.j2"]
"piketype.backends.cpp" = ["templates/**/*.j2"]
"piketype.backends.sv" = ["templates/**/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportAny = false
reportExplicitAny = false

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
]
